# app/Http/Resources/Api/PondResource.php
@@ -10,12 +10,33 @@ use Illuminate\Http\Resources\Json\JsonResource;
  * @OA\Schema(
  *     schema="PondResource",
  *     title="Pond Resource",
- *     @OA\Property(property="id", type="integer", format="int64", example="1"),
- *     @OA\Property(property="name", type="string", maxLength=180, example="Pond Name"),
- *     @OA\Property(property="slug", type="string", maxLength=191, example="pond-name"),
- *     @OA\Property(property="status", type="string", enum={"active", "inactive"}, default="active", example="active"),
- *     @OA\Property(property="address", type="string", example="Pond address"),
- *     @OA\Property(property="description", type="string", example="Pond description"),
+ *     @OA\Property(property="id", type="integer", format="int64"),
+ *     @OA\Property(property="name", type="string", maxLength=180),
+ *     @OA\Property(property="slug", type="string", maxLength=191),
+ *     @OA\Property(property="status", type="string", enum={"active", "inactive"}, default="active"),
+ *     @OA\Property(property="address", type="string"),
+ *     @OA\Property(property="description", type="string"),
+ *
+ *     @OA\Property(
+ *         property="sensor_units",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/SensorUnitResource")
+ *     ),
+ *     @OA\Property(
+ *         property="switch_units",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/SwitchUnitResource")
+ *     ),
+ *     @OA\Property(
+ *         property="sensor_types",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/SensorType")
+ *     ),
+ *     @OA\Property(
+ *         property="switch_types",
+ *         type="array",
+ *         @OA\Items(ref="#/components/schemas/SwitchType")
+ *     ),
  * )
  */
 class PondResource extends JsonResource
